# OpenFOAM-Exporter

./: .gitignore  CMakeLists.txt  OpenFoamExporter.sln  README.md  UpgradeLog.htm
BIM/: AssemblyInfo.cs  DataGenerator.cs  OpenFOAMExportButtonCommand.cs  OpenFOAMExportCancelForm.cs  OpenFOAMExportForm.Designer.cs  OpenFOAMExportForm.cs  OpenFOAMExportForm.resx  OpenFOAMExportResource.Designer.cs  OpenFOAMExportResource.resx  OpenFoamExport.addin  OpenFoamExport.csproj  OpenFoamExportCommand.cs  OpenFoamExporterUI.cs  OpenFoamSimulateCommand.cs  SaveData.cs  Settings.cs  XMLHandler.cs
BIM/OpenFOAM/: Alphat.cs  BlockMeshDict.cs  ControlDict.cs  DecomposeParDict.cs  Epsilon.cs  FoamDict.cs  FoamFile.cs  FoamParameter.cs  FvSchemes.cs  FvSolution.cs  G.cs  K.cs  MeshDict.cs  Nut.cs  P.cs  P_rgh.cs  RunManager.cs  SnappyHexMeshDict.cs  SurfaceFeatureExtract.cs  T.cs  TransportProperties.cs  TurbulenceProperties.cs  U.cs
BIM/OpenFOAMUI/: OpenFOAMTextBoxForm.cs  OpenFOAMTreeNode.cs  OpenFOAMTreeView.cs
BIM/Properties/: Resources.Designer.cs  Resources.resx
Setup/: Setup.isl  Setup.isproj
Setup/Setup/Express/DVD-5/LogFiles/: 2-18-2019 06-52-10.txt  2-18-2019 06-53-10.txt
Setup/Setup/Express/DVD-5/Reports/: 2-18-2019 06-52-22.xml  2-18-2019 06-53-19.xml
Source/: AssemblyInfo.cs  ClassDiagram.cd  DataGenerator.cs  OpenFOAMExportCancelForm.cs  OpenFOAMExportForm.Designer.cs  OpenFOAMExportForm.cs  OpenFOAMExportForm.resx  OpenFOAMExportResource1.Designer.cs  OpenFoamDialogManager.cs  OpenFoamExport.addin  OpenFoamExport.csproj  OpenFoamExportCommand.cs  OpenFoamExportResource.Designer.cs  OpenFoamExportResource.resx  OpenFoamExporterUI.cs  STLExportCancelForm.Designer.cs  STLExportCancelForm.cs  STLExportForm.Designer.cs  STLExportForm.cs  STLExportForm.resx  SaveData.cs  Settings.cs  XMLHandler.cs
Source/OpenFOAM/: Alphat.cs  BlockMeshDict.cs  ControlDict.cs  DecomposeParDict.cs  Epsilon.cs  FoamDict.cs  FoamFile.cs  FoamParameter.cs  FvSchemes.cs  FvSolution.cs  G.cs  K.cs  MeshDict.cs  Nut.cs  OpenFOAMCalculator.cs  P.cs  P_rgh.cs  RunManager.cs  SnappyHexMeshDict.cs  SurfaceFeatureExtract.cs  TransportProperties.cs  TurbulenceProperties.cs  U.cs  Version.cs
Source/OpenFOAMUI/: OpenFOAMDropDownTreeNode.cs  OpenFOAMEnvironmentForm.Designer.cs  OpenFOAMEnvironmentForm.cs  OpenFOAMTextBoxForm.Designer.cs  OpenFOAMTextBoxForm.cs  OpenFOAMTextBoxTreeNode.cs  OpenFOAMTreeNode.cs  OpenFOAMTreeView.cs
Source/Properties/: Resources.Designer.cs  Resources.resx
Source/Resources/: ADSKSTLExporterHelp.htm
